app/assets/stylesheets/styles.css.scss
$bodyBackground: #f8f8f8;
$btnBackground: #08c; 
$btnPrimaryBackground: pink; 
$navbarBackgroundHighlight: white;
$navbarBackground: pink;
$headingsFontFamily: "Croissant One", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
@import url(http://fonts.googleapis.com/css?family=Croissant+One);
@import 'bootstrap';

body {
	padding-top: 60px;
}

@import 'bootstrap-responsive';
.btn-primary {color: #333333;}
.hero-unit {
	background-color: #f8f8f8;
 	h1 {color: #c3334e;}
}
h1, h2, {color: #c3334e;}
.navbar-inner {
	@include box-shadow(none !important);
	border: 0;
}
.footer {
	margin-top: 50px;
	color: $grayLight;
	text-align: center;
	a {
		color: $gray;
	}
}
#pins {margin: 0 auto;}
/*required for jQ Masonry*/
.box {
	margin: 5px;
	padding: 12px;
	font-size: 11px;
	line-height: 1.4em;
	float: left;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius:  5px;
	box-shadow: 1px 1px 10px #444;
	width: 250;
	}
.box img {
	display: block;
	width: 100%;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius:  5px;
}
.description {
	white-space: pre-line;
}
.pagination {
	padding-top: 20px;
	text-align: center;
}
	

